--- a/wiki/XmlMonitoring.wiki
+++ b/wiki/XmlMonitoring.wiki
@@ -35,8 +35,8 @@ All options not otherwise specified are point-time outputs.
 || N_v || The number of mosquitoes ||
 || O_v || The number of infected mosquitoes ||
 || S_v || The number of infectious mosquitoes ||
-|| input EIR || Total entomological infection rate input. This is a fixed periodic value, for comparison with simulated EIR. Units (from schema version 24): inoculations per adult per timestep. ||
-|| simulated EIR || EIR actually acting on humans, as calculated by the transmission model. Units: from schema version 26, inoculations per adult per timestep, previously inoculations per person per timestep. ||
+|| input EIR || Requested entomological infection rate. This is a fixed periodic value, for comparison with simulated EIR. Units (from schema version 24): inoculations per adult per timestep. ||
+|| simulated EIR || EIR acting on simulated humans. Units: from schema version 26, inoculations per adult per timestep, previously inoculations per person per timestep. ||
 || human infectiousness || Infectiousness of humans to mosquitoes, also known as kappa. This is the probability that a mosquito becomes infected at any single feed on a human. ||
 || human availability || Mean availability of humans to mosquitoes compared to a human adult. ||
 || immunity h || Average of `_cumulativeh` parameter across humans, which is the cumulative number of infections received since birth ||
@@ -101,8 +101,8 @@ The Nv0, Nv, Ov and Sv outputs are per-species; the EIR outputs are single value
 || 32 || Vector_Nv  || vector species || n ||  Mosquito population size ||
 || 33 || Vector_Ov  || vector species || n ||  Number of infected mosquitoes ||
 || 34 || Vector_Sv  || vector species || n ||  Number of infectious mosquitoes ||
-|| 35 || Vector_EIR_Input  || (unused) || n ||  Input EIR (Expected EIR entered into scenario file). Units (from schema version 24): inoculations per adult per timestep. ||
-|| 36 || Vector_EIR_Simulated  || (unused) || n ||  Simulated EIR (EIR output by the vector model). Units: from schema version 26, inoculations per adult per timestep, previously inoculations per person per timestep. ||
+|| 35 || Vector_EIR_Input  || (unused) || n ||  Input EIR (rate entered into scenario file). Units (from schema version 24): inoculations per adult per timestep. ||
+|| 36 || Vector_EIR_Simulated  || (unused) || n ||  Entomological inoculation rate acting within the simulation. From schema 26 children are omitted to obtain adult-only EIR. Units: inoculations per adult/person per timestep. ||
 || 37 || || || || (removed) ||
 || 38 || || || || (removed) ||
 || 39 || Clinical_RDTs  || (unused) || 24 ||  Number of Rapid Diagnostic Tests used ||
