Edited wiki page ScenarioHealthSystem through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1678 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ScenarioHealthSystem.wiki
+++ b/wiki/ScenarioHealthSystem.wiki
@@ -213,7 +213,7 @@ A few built-in decisions exist, and a few particular decisions must be provided,
 || `result` || `none`, `negative`, `positive` || built-in || If the `test` decision has an outcome other than `none`, a parasite-density test is performed using the current density of the simulated case; otherwise the outcome is `none`. The number of RDT tests used is reported for costing purposes. ||
 || `test` || `none`, `microscopy`, `RDT` || required || Determines whether and which type of malarial diagnostic is used ||
 || `treatment` || || required || Selects which treatment to medicate. Outcomes are not restricted, but must match exactly the treatments available (so probably a treatment called "none" will need to be added). ||
-|| `hospitalisation` || `none`,`immediate`,`delayed` || required for `complicated` || Determines whether the individual goes to hospital or not, and whether a 1-day delay to hospital entry occurs. Hospitalisation affects fatality rate, reporting, and protects patient from mosquito bites. A delay causes the afore-mentioned effects to be delayed as expected, but does not delay treatments — this means that immediate suppositories may be given, but hospital-administered drugs should be delayed by a day. || 
+|| `hospitalisation` || `none`,`immediate`,`delayed` || required for `complicated` || Determines whether the individual goes to hospital or not, and whether a 1-day delay to hospital entry occurs. Hospitalisation affects fatality rate, reporting, and protects patient from mosquito bites. A delay causes the afore-mentioned effects to be delayed as expected, but does not delay treatments — this allows immediate suppositories to be given, but means that hospital-administered drugs should be delayed by a day in the XML (using the "delay" modifier). || 
 
 Regarding costing, sometimes in severe cases 2 tests would be used (by a referring health centre, and by the hospital accepting the patient). One method of dealing with this, assuming the in-hospital test result has no impact on treatment decisions, is to assume all patients get an RDT test in hospital (by adding the number of hospital recoveries+deaths+sequelae to the number of RDTs reported), and use the `test` decision to describe whether an out-of-hospital test occurs.
 
