--- a/wiki/ModelClinical.wiki
+++ b/wiki/ModelClinical.wiki
@@ -37,7 +37,7 @@ In this model, each individual is assigned a clinical state which lasts until th
 
 A _bout_ commences with a morbidity _event_ and concludes with a recovery or mortality _event_ (stressing terminology used). When the bout first occurs, the clinical scheduler calls the clinical decisions model. At the start of an uncomplicated fever, we model a potential treatment-seeking delay. In this model, the bout duration of uncomplicated malarial fevers and non-malarial fevers is fixed at three days from the time of seeking treatment, or from the start of illness (if treatment is not sought). If an individual delays seeking treatment for one or two days, bout duration becomes four or five days, respectively. During this time, the clinical scheduler maintains the individual in the same state, unless the [ModelPathogenesis Pathogenesis models] indicate that the illness has progressed to severe. After this time period, it is assumed that parasite densities have been reduced by treatment or immunity, and the individual is returned to the healthy state. 
 
-While healthy or during an uncomplicated bout, a severe bout may commence. In this case, the clinical scheduler calls the clinical decisions model and cancels any recent drug treatment. The severe bout is fixed at five days long when the patient enters hospital immediately or not at all; a one-day delay to hospital entry is also considered possible which increases the bout length to six days. 
+While healthy or during an uncomplicated bout, a severe bout may commence. In this case, the clinical scheduler calls the clinical decisions model and cancels any recent drug treatment. The severe bout is fixed at six days long when the patient enters hospital immediately or not at all; a one-day delay to hospital entry is also considered possible which increases the bout length to seven days. 
 
 Mortality is possible during severe malaria bouts, and considered as a stochastic function of the proportional reduction in parasite density each day of the case (TODO: link article). Each day during the severe illness, the clinical scheduler calls the severe outcomes model, which applies the appropriate case fatality rate to determine whether or not the individual died that day. For delayed hospital entry, the community death rate takes effect on the first day. To simplify costing of hospital stays, mortality events are always modeled as happening at the end of the associated severe episode.
 
