Edited wiki page ModelClinical through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1693 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ModelClinical.wiki
+++ b/wiki/ModelClinical.wiki
@@ -75,7 +75,7 @@ The following costs are considered:
  
  • parasite (RDT and microscopy) diagnostics used
  
- • outpatient health center visits
+ • outpatient visits
 
  • patient hospital days, using fixed average lengths for stays resulting in recovery and stays ending with mortality 
 
