--- a/wiki/ModelDecayFunctions.wiki
+++ b/wiki/ModelDecayFunctions.wiki
@@ -40,3 +40,9 @@ Examples for "eltName":
 In some uses, such as to describe the effects of bed nets, the decay-function's value must be multiplied by a parameter describing the level of effect before any decay; this is done by the `initial` attribute.
 
 The `function`, `L` and `k` attributes act as described above, with `k` optional (defaults to `1` if not specified).
+
+== Heterogeneity ==
+
+Starting with version 26 of OpenMalaria, variations can be introduced into decay rate: a random variate x is sampled from the log-normal distribution, and t in the above formulas is replaced by t/x.
+
+The attribute `sigma` can be specified as part of the decay-function description element: if this is non-zero, x is sampled as: `x ~ lnN(0,sigma²)`.
