Edited wiki page ModelClinical through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1703 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ModelClinical.wiki
+++ b/wiki/ModelClinical.wiki
@@ -33,7 +33,7 @@ The clinical decisions component of the model (implemented in the ESCaseManageme
 
 ===Clinical scheduler===
 
-In this model, each individual is assigned a clinical state which lasts until the next event. There is the option to enable the NON_MALARIA_FEVERS option. If this is not enabled, possible states are healthy, uncomplicated malarial fever, severe malaria, and dead. The corresponding events are start of an uncomplicated malarial fever from a healthy state, start of severe malaria (from healthy or uncomplicated malaria states), direct death (from a severe malaria state) and recovery (from uncomplicated malaria or severe malaria states). When the NON_MALARIA_FEVERS option is enabled, an additional state of uncomplicated non-malarial fever exists. Then, the corresponding events are start of an uncomplicated fever (malarial or non-malarial) from a healthy state, start of severe malaria (from healthy or uncomplicated fever states), direct death (from a severe malaria state or non-malarial illness) and recovery (from uncomplicated malaria or severe malaria states). Transitions from severe malaria to uncomplicated fever, or from uncomplicated fever to death, are not allowed.
+In this model, each individual is assigned a clinical state which lasts until the next event. There is the possibility to enable the NON_MALARIA_FEVERS option. If this is not enabled, possible states are healthy, uncomplicated malarial fever, severe malaria, and dead. The corresponding events are start of an uncomplicated malarial fever from a healthy state, start of severe malaria (from healthy or uncomplicated malaria states), direct death (from a severe malaria state) and recovery (from uncomplicated malaria or severe malaria states). When the NON_MALARIA_FEVERS option is enabled, an additional state of uncomplicated non-malarial fever exists. Then, the corresponding events are start of an uncomplicated fever (malarial or non-malarial) from a healthy state, start of severe malaria (from healthy or uncomplicated fever states), direct death (from a severe malaria state or non-malarial illness) and recovery (from uncomplicated malaria or severe malaria states). Transitions from severe malaria to uncomplicated fever, or from uncomplicated fever to death, are not allowed.
 
 A _bout_ commences with a morbidity _event_ and concludes with a recovery or mortality _event_ (stressing terminology used). When the bout first occurs, the clinical scheduler calls the clinical decisions model. At the start of an uncomplicated fever, we model a potential treatment-seeking delay. In this model, the bout duration of uncomplicated malarial fevers and non-malarial fevers is fixed at three days from the time of seeking treatment, or from the start of illness (if treatment is not sought). If an individual delays seeking treatment for one or two days, bout duration becomes four or five days, respectively. During this time, the clinical scheduler maintains the individual in the same state, unless the [ModelPathogenesis Pathogenesis models] indicate that the illness has progressed to severe or the individual has died from a non-malarial illness. After this time period, it is assumed that parasite densities have been reduced by treatment or immunity, or that the individual has recovered from the non-malarial illness, and the individual is returned to the healthy state. 
 
