--- a/wiki/ModelClinical.wiki
+++ b/wiki/ModelClinical.wiki
@@ -39,7 +39,7 @@ A _bout_ commences with a morbidity _event_ and concludes with a recovery or mor
 
 While healthy or during an uncomplicated bout, a severe bout may commence. In this case, the clinical scheduler calls the clinical decisions model and cancels any recent drug treatment. The severe bout is fixed at six days long when the patient enters hospital immediately or not at all; a one-day delay to hospital entry is also considered possible which increases the bout length to seven days. 
 
-Mortality is possible during severe malaria bouts, and considered as a stochastic function of the proportional reduction in parasite density each day of the case (TODO: link article). Each day during the severe illness, the clinical scheduler calls the severe outcomes model, which applies the appropriate case fatality rate to determine whether or not the individual died that day. For delayed hospital entry, the community death rate takes effect on the first day. To simplify costing of hospital stays, mortality events are always modeled as happening at the end of the associated severe episode.
+Mortality is possible during severe malaria bouts, and considered as a stochastic function of the proportional reduction in parasite density each day of the case (TODO: link article). Each day during the severe illness, the clinical scheduler calls the severe outcomes model, which applies the appropriate case fatality rate to determine whether or not the individual died that day. For delayed hospital entry, the community death rate takes effect on the first day. Mortality events are always modeled as happening at the end of the associated severe episode.
 
 ===Clinical decisions===
 
