--- a/wiki/XmlMonitoring.wiki
+++ b/wiki/XmlMonitoring.wiki
@@ -120,4 +120,4 @@ The Nv0, Nv, Ov and Sv outputs are per-species; the EIR outputs are single value
 || 51 || nRemovedFromCohort || age group || n || Number of individuals removed from cohort ||
 || 52 || nMDAs || age group || y || Number of mass vaccination doses given (where configured as screen&treat, etc., this only reports treatments actually prescribed) ||
 || 53 || nNmfDeaths || age group || y || Direct deaths due to non-malaria fevers ||
-|| 54 || nAntibioticTreatments || age group || Report number of antibiotic treatments administered ||
+|| 54 || nAntibioticTreatments || age group || y || Report number of antibiotic treatments administered ||
