--- a/wiki/ModelPathogenesis.wiki
+++ b/wiki/ModelPathogenesis.wiki
@@ -7,3 +7,15 @@ Openmalaria's pathogenesis models determines the onset of sickness bouts (the st
  * *Base pathogenesis model* This is a stochastic model that relates the probability of a clinical attack of malaria to the peripheral parasite densities via a pyrogenic threshold that itself responds dynamically to the parasite load. [http://www.ncbi.nlm.nih.gov/pubmed/16931816 Smith et al, 2006] (this is implemented in the `PyrogenPathogenesis` class): The parameters of the model have been estimated by fitting it to the relationship between incidence of clinical episodes and the entomologic inoculation rate, using age-specific incidence data from two villages in Senegal and one village in Tanzania.
  * *Predetermined bouts pathogenesis model* This is a variant of the base pathogenesis model in which bouts occur deterministically when the parasite density exceeds the pyrogenic threshold (`PredetPathogenesis` class).
  * *Mueller pathogenesis model* This is a stochastic model that uses a log-linear function of parasite densities to determine the probability of a clinical bout, based on equations fitted by [http://www.ncbi.nlm.nih.gov/pubmed/19602275 Mueller et al, 2009] to data from Papua New Guinea.  There is no explicit pyrogenic threshold in this model. (This is implemented in the `MuellerPathogenesis` class).
+
+== Non-malarial fever incidence and severity ==
+
+|| *Age-group*||*All fever pppy*||*RR*||*Estimated non-malarial fevers pppy*|| 
+			
+|| 0-11 mo.|| 9.1||9.66|| 1|| 6.08|| 
+|| 12-59 mos|| 9.8|| 			
+|| 5-9 vrs.|| 6.06|| 6.06|| 0.627329|| 3.81|| 
+|| 10-14 yrs.|| 4.16|| 4.16|| 0.430642|| 2.62
+|| 15-59 yrs.|| 6.43|| 6.43|| 0.665631|| 4.05
+|| 60 yrs +|| 8.6|| 8.6|| 0.890269|| 5.41|| 
+_Table 1: Estimated incidence of non-malarial fevers. Source: Incidence of non-malarial fever in various age-groups and epidemiological settings, Allan Schapira, 8/12/2009._
