--- a/wiki/ModelPathogenesis.wiki
+++ b/wiki/ModelPathogenesis.wiki
@@ -10,7 +10,7 @@ Openmalaria's pathogenesis models determines the onset of sickness bouts (the st
 
 == Non-malarial fever incidence and severity ==
 
-|| *Age-group*||*All fever pppy*|||| *RR*||*Estimated non-malarial fevers pppy*|| 
+|| *Age-group*|||| *All fever pppy*||*RR*||*Estimated non-malarial fevers pppy*|| 
 			
 || 0-11 mo.|| 9.1||9.66|| 1|| 6.08|| 
 || 12-59 mos|| 9.8|| 			
