--- a/wiki/ModelPathogenesis.wiki
+++ b/wiki/ModelPathogenesis.wiki
@@ -10,10 +10,10 @@ Openmalaria's pathogenesis models determines the onset of sickness bouts (the st
 
 == Non-malarial fever incidence and severity ==
 
-|| *Age-group*|||| *All fever pppy*||*RR*||*Estimated non-malarial fevers pppy*|| 
+|| *Age-group*|||| *All fever pppy*||* RR *||* Estimated non-malarial fevers pppy *|| 
 			
 || 0-11 mo.|| 9.1||9.66|| 1|| 6.08|| 
-|| 12-59 mos|| 9.8|| 			
+|| 12-59 mos||||  9.8|| 			
 || 5-9 vrs.|| 6.06|| 6.06|| 0.627329|| 3.81|| 
 || 10-14 yrs.|| 4.16|| 4.16|| 0.430642|| 2.62|| 
 || 15-59 yrs.|| 6.43|| 6.43|| 0.665631|| 4.05|| 
