--- a/wiki/ModelPathogenesis.wiki
+++ b/wiki/ModelPathogenesis.wiki
@@ -8,7 +8,7 @@ Openmalaria's pathogenesis models determines the onset of sickness bouts (the st
  * *Predetermined bouts pathogenesis model* This is a variant of the base pathogenesis model in which bouts occur deterministically when the parasite density exceeds the pyrogenic threshold (`PredetPathogenesis` class).
  * *Mueller pathogenesis model* This is a stochastic model that uses a log-linear function of parasite densities to determine the probability of a clinical bout, based on equations fitted by [http://www.ncbi.nlm.nih.gov/pubmed/19602275 Mueller et al, 2009] to data from Papua New Guinea.  There is no explicit pyrogenic threshold in this model. (This is implemented in the `MuellerPathogenesis` class).
 
-== Non-malarial fever incidence and severity ==
+=== Non-malarial fever incidence and severity ===
 
 || *Age-group*|||| *All fever pppy*|| *RR*|| *Estimated non-malarial fevers pppy*|| 
 			
@@ -19,9 +19,9 @@ Openmalaria's pathogenesis models determines the onset of sickness bouts (the st
 || 15-59 yrs.|| 6.43|| 6.43|| 0.665631|| 4.05|| 
 || 60 yrs +|| 8.6|| 8.6|| 0.890269|| 5.41|| 
 
-_Table 1: Estimated incidence of non-malarial fevers. Source: Incidence of non-malarial fever in various age-groups and epidemiological settings, Allan Schapira, 8/12/2009._
+_Table: Estimated incidence of non-malarial fevers. Source: Incidence of non-malarial fever in various age-groups and epidemiological settings, Allan Schapira, 8/12/2009._
 
-To model age-based incidence of non-malarial fever, we currently use the data shown in table 1. In order to transform this into a continuous function for frequency given age, we interpolate linearly on the data-points generated as follows:
+To model age-based incidence of non-malarial fever, we currently use the data shown in the above table. In order to transform this into a continuous function for frequency given age, we interpolate linearly on the data-points generated as follows:
 1.	For each age group, add a data point centred on the age axis with frequency as given in the age group.
 2.	Add data points at ages 0 and infinity, taking frequency from that of the youngest and oldest age groups.
 We model the incidence of non-malarial fever as an interpolated linear function. Non-malarial fevers can only start at a given time point if it has been determined that a malarial fever is not starting at that time point. If both a non-malarial fever and a malarial fever occur within the health system memory, only the malaria episode is reported. 
