--- a/wiki/ModelClinical.wiki
+++ b/wiki/ModelClinical.wiki
@@ -69,6 +69,48 @@ In both severe and uncomplicated cases, the relevant case management decision tr
 
 The treatment schedule is applied to the individual as a list of pending medications that are given over the next time points. Any previously pending medications are cancelled when new treatments are prescribed, and drugs are only costed when taken, so that if an individual progresses to severe after receiving treatments for an uncomplicated case, remained unconsumed medications are not costed.
 
+
+====Non-malarial fever (NMF)====
+
+* Probability of antibiotic administration*
+We assume that each individual has a probability of antibiotic administration, Pr(AB), according to whether s(he) has a NMF or a malarial fever and according to treatment-seeking location:
+
+For NMF:
+
+* No treatment-seeking: Pr(AB) = 0.
+
+* Health facility: Pr(AB) is a function of the average probability of being prescribed an antibiotic in the absence of a malaria test, P0; whether the individual had a negative or a positive malaria diagnostic test result, and whether the individual needs or does not need an antibiotic (this latter captures signs and symptoms that would indicate to a health worker need for antibiotics, in the absence of knowledge of malaria parasitological status). Thus:
+
+β0= logit (P0) - β3 * Pr(NMF needs antibiotics)
+and
+Logit(Pr(AB)= β0 + β1 * I (MD-) + β2 * I(MD+) + β3 (need)
+
+where β1 and β2 are the effect of a negative and positive test, respectively, on the log odds of receiving an antibiotic and β3 is the effect of needing an antibiotic on the log odds of receiving it. I(X) is 1 when event X is true and 0 otherwise, event "need" is the event that death may occur without treatment, events "MD-" and "MD+" are the events that a malaria parasite diagnostic was used and indicated no parasites and parasites respectively.
+
+* In the informal sector:
+
+Logit(Pr(AB)= β0 + β4
+
+where exp(β4) is the effect of seeking treatment in the informal sector on the odds of getting antibiotics. In general, we do not know how the chance of getting an antibiotic depends on health facility attendance. Therefore, for the purposes of this model, we set β4 to 0, assuming that the overall probability of getting an antibiotic is not affected by seeking in the informal sector but targeting of antibiotics to those in need is improved in health facilities both by malaria diagnosis and additional diagnostic procedures (e.g. measuring respiratory rates, examining for symptoms of viral infection, etc).
+
+* Community health workers:
+# Trained to administer only presumptive treatment for malaria:  Pr(AB)= 0 
+# Trained in malaria diagnostic testing and management of non-malarial fevers: Pr(AB) as in formal sector
+
+For malarial fever:
+
+β0= logit (P0) - β3 * Pr(malarial fever needs antibiotics)
+and
+Logit(Pr(AB)= β0 + β1 * I (MD-) + β2 * I(MD+) + β3 (need)
+
+
+* Case fatality rates*
+
+The CFR of fevers that do not need antibiotics is assumed to be 0. 
+
+CFR(a)¦ need= γ0(a) (1-εAB*I(AB))
+Where γ0(a) is the CFR(a) in absence of antibiotic, given need, and εAB is the efficacy of the antibiotic on CFR. I(AB) takes the value 1 if the individual receives an antibiotic and 0 if s(he) does not. 
+
 ===Costing===
 The following costs are considered: 
  • drugs medicated, including vomited doses but not doses skipped due to poor adherence
