--- a/wiki/ModelClinical.wiki
+++ b/wiki/ModelClinical.wiki
@@ -80,9 +80,9 @@ For NMF:
 
 * Health facility: Pr(AB) is a function of the average probability of being prescribed an antibiotic in the absence of a malaria test, P0; whether the individual had a negative or a positive malaria diagnostic test result, and whether the individual needs or does not need an antibiotic (this latter captures signs and symptoms that would indicate to a health worker need for antibiotics, in the absence of knowledge of malaria parasitological status). Thus:
 
-β0= logit (P0) - β3 * Pr(NMF needs antibiotics)
+β0= logit (P0) - β3 x Pr(NMF needs antibiotics)
 and
-Logit(Pr(AB)= β0 + β1 * I (MD-) + β2 * I(MD+) + β3 (need)
+Logit(Pr(AB)= β0 + β1 x I (MD-) + β2 x I(MD+) + β3 (need)
 
 where β1 and β2 are the effect of a negative and positive test, respectively, on the log odds of receiving an antibiotic and β3 is the effect of needing an antibiotic on the log odds of receiving it. I(X) is 1 when event X is true and 0 otherwise, event "need" is the event that death may occur without treatment, events "MD-" and "MD+" are the events that a malaria parasite diagnostic was used and indicated no parasites and parasites respectively.
 
@@ -98,16 +98,16 @@ where exp(β4) is the effect of seeking treatment in the informal sector on the 
 
 For malarial fever:
 
-β0= logit (P0) - β3 * Pr(malarial fever needs antibiotics)
+β0= logit (P0) - β3 x Pr(malarial fever needs antibiotics)
 and
-Logit(Pr(AB)= β0 + β1 * I (MD-) + β2 * I(MD+) + β3 (need)
+Logit(Pr(AB)= β0 + β1 x I (MD-) + β2 x I(MD+) + β3 (need)
 
 
-* Case fatality rates*
+_Case fatality rates_
 
 The CFR of fevers that do not need antibiotics is assumed to be 0. 
 
-CFR(a)¦ need= γ0(a) (1-εAB*I(AB))
+CFR(a)¦ need= γ0(a) (1-εAB x I(AB))
 Where γ0(a) is the CFR(a) in absence of antibiotic, given need, and εAB is the efficacy of the antibiotic on CFR. I(AB) takes the value 1 if the individual receives an antibiotic and 0 if s(he) does not. 
 
 ===Costing===
