--- a/wiki/ModelClinical.wiki
+++ b/wiki/ModelClinical.wiki
@@ -80,7 +80,7 @@ _For NMF:_
 
 - Health facility: Pr(AB) is a function of the average probability of being prescribed an antibiotic in the absence of a malaria test, P0; whether the individual had a negative or a positive malaria diagnostic test result, and whether the individual needs or does not need an antibiotic (this latter captures signs and symptoms that would indicate to a health worker need for antibiotics, in the absence of knowledge of malaria parasitological status). Thus:
 
-β0= logit (P0) - β3 x Pr(NMF needs antibiotics)
+β0= logit (P0) - β3 x Pr(NMF needs antibiotics)<br>
 and
 Logit(Pr(AB)= β0 + β1 x I (MD-) + β2 x I(MD+) + β3 (need)
 
