--- a/wiki/ModelClinical.wiki
+++ b/wiki/ModelClinical.wiki
@@ -81,7 +81,7 @@ _For NMF:_
 - Health facility: Pr(AB) is a function of the average probability of being prescribed an antibiotic in the absence of a malaria test, P0; whether the individual had a negative or a positive malaria diagnostic test result, and whether the individual needs or does not need an antibiotic (this latter captures signs and symptoms that would indicate to a health worker need for antibiotics, in the absence of knowledge of malaria parasitological status). Thus:
 
 β0= logit (P0) - β3 x Pr(NMF needs antibiotics)<br>
-and
+and <br>
 Logit(Pr(AB)= β0 + β1 x I (MD-) + β2 x I(MD+) + β3 (need)
 
 where β1 and β2 are the effect of a negative and positive test, respectively, on the log odds of receiving an antibiotic and β3 is the effect of needing an antibiotic on the log odds of receiving it. I(X) is 1 when event X is true and 0 otherwise, event "need" is the event that death may occur without treatment, events "MD-" and "MD+" are the events that a malaria parasite diagnostic was used and indicated no parasites and parasites respectively.
@@ -97,8 +97,8 @@ If they are trained to administer only presumptive treatment for malaria, then w
 
 _For malarial fever:_
 
-β0= logit (P0) - β3 x Pr(malarial fever needs antibiotics)
-and
+β0= logit (P0) - β3 x Pr(malarial fever needs antibiotics)<br>
+and<br>
 Logit(Pr(AB)= β0 + β1 x I (MD-) + β2 x I(MD+) + β3 (need)
 
 
